[package]
name = "mldb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
deadpool-postgres = "0.10.5"
tokio-postgres = "0.7.7"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
